k8s/shoppinglist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppinglist-deployment
  labels:
    app: shoppinglist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppinglist
  template:
    metadata:
      labels:
        app: shoppinglist
    spec:
      containers:
        - name: shoppinglist
          image: shubhamgoel23/shoppinglist:postgres
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shoppinglist-service
spec:
  selector:
    app: shoppinglist
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
